# congress-analysis

./: .gitignore  congress_analyzer.py  pyproject.toml  requirements.txt
notebooks/: CongressTenureAnalysis.ipynb
src/: congress_analyzer.py
