[project]
name = "congress-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "peppapig450",email = "peppapig450@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly[express] (>=6.0.1,<7.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

